# python-docker-service-template

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Justfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
scripts/: crap_gate.py
src/template_service/: __init__.py  cli.py  core.py
tests/: test_cli.py
